--- a/css/Discord.css
+++ b/css/Discord.css
@@ -1,105 +1,87 @@
 :root {
-    /* ACCENT COLORS */
-    --main-color: rgb(255, 103, 64); /* main accent color (hex, rgb or hsl) [default: #2780e6] */
-    --hover-color: var(--main-color); /* hover accent color (hex, rgb or hsl) [default: #1e63b3] */
-    --success-color: #43b581; /* success accent color (hex, rgb or hsl) [default: #43b581] */
-    --danger-color: #982929; /* danger accent color (hex, rgb or hsl) [default: #982929] */
-    --url-color: var(--main-color); /*The color of url links [default: var(--main-color)]*/
-
-    /* STATUS COLORS */
-    --online-color: #43b581; /* online status color (hex, rgb or hsl) [default: #43b581] */
-    --idle-color: #faa61a; /* idle status color (hex, rgb or hsl) [default: #faa61a] */
-    --dnd-color: #982929; /* dnd status color (hex, rgb or hsl) [default: #982929] */
-    --streaming-color: #593695; /* streaming status color (hex, rgb or hsl) [default: #593695] */
-    --offline-color: #808080; /* offline/invisible status color (hex, rgb or hsl) [default: #808080] */
-
-    /* GENERAL */
-    --main-font: "游明朝体", "Yu Mincho", YuMincho, "ヒラギノ明朝 Pro", "Hiragino Mincho Pro", "MS P明朝", "MS PMincho", serif; /* main font for app (font must be installed) [default: gg sans, Helvetica Neue, Helvetica, Arial, sans-serif] */
-    --code-font: Consolas, Liberation Mono, Menlo, Courier, monospace; /* font for codeblocks (font must be installed) [default: Consolas, Liberation Mono, Menlo, Courier, monospace] */
-    --text-normal: rgb(200, 200, 200); /* color of default discord text */
-    --text-muted: rgb(110, 110, 110); /* color of default discord muted text (e.g.text found in input fields before typing).*/
-    --channels-width: 220px; /* channel list width (240px for Discord default) [default: 220px] */
-    --members-width: 240px; /* member list width [default: 240px] */
-
-    /* APP BACKGROUND */
-    --background-shading: 100%; /* app background shading (0 for complete smoothness) [default: 100%] */
-    --background-overlay: rgba(0, 0, 0, 0.15); /* app background overlay color/gradient [default: rgba(0, 0, 0, 0.6)] */
-    --background-image: url(https://tfpalive.github.io/images/imgs/Gochiusa.png); /* app background image (link must be HTTPS) [default: url(https://clearvision.github.io/images/sapphire.jpg)]*/
-    --background-position: center; /* app background position [default: center] */
-    --background-size: cover; /* app background size [default: cover] */
-    --background-repeat: no-repeat; /* app background repeat [default: no-repeat] */
-    --background-attachment: fixed; /* app background attachment [default: fixed] */
-    --background-brightness: 100%; /* app background brightness (< 100% for darken, > 100% for lighten) [default: 100%] */
-    --background-contrast: 100%; /* app background contrast [default: 100%] */
-    --background-saturation: 100%; /* app background saturation [default: 100%] */
-    --background-invert: 0%; /* app background invert (0 - 100%)  [default: 0%] */
-    --background-grayscale: 0%; /* app background grayscale ( 0 - 100%) [default: 0%] */
-    --background-sepia: 0%; /* app background sepia (0 - 100%) [default: 0%] */
-    --background-blur: 0px; /* app background blur [default: 0px] */
-
-    /* HOME BUTTON ICON */
-    --home-icon: url(https://tfpalive.github.io/images/icons/Discord.svg); /* home button icon (link must be HTTPS) [default: url(https://clearvision.github.io/icons/discord.svg)]*/
-    --home-position: center; /* home button icon position [default: center] */
-    --home-size: 50px; /* home button icon size [default: 40px] */
-
-    /* CHANNEL COLORS */
-    --channel-unread: var(--main-color); /* Unread Server channel color. [default:  var(--main-color)] THIS OVERRIDES YOUR MAIN COLOR*/
-    --channel-color: rgba(255, 255, 255, 0.8); /*Read Server channel color  [default: rgba(255,255,255,0.3);]*/
-    --channel-text-selected: #fff; /* Selected channel text color, CV default is #fff */
-    --muted-color: rgba(255, 255, 255, 0.1); /*Muted channel color  [default: rgba(255,255,255,0.1);]*/
-
-    /* MODAL BACKDROP */
-    --backdrop-overlay: rgba(0, 0, 0, 0.3); /* modal backdrop overlay color/gradient [default: rgba(0, 0, 0, 0.8)] */
-    --backdrop-image: var(--background-image); /* modal backdrop image (link must be HTTPS) [default: var(--background-image)] */
-    --backdrop-position: var(--background-position); /* modal backdrop position [default: var(--background-position)] */
-    --backdrop-size: var(--background-size); /* modal backdrop size [default: var(--background-size)] */
-    --backdrop-repeat: var(--background-repeat); /* modal backdrop repeat [default: var(--background-repeat)] */
-    --backdrop-attachment: var(--background-attachment); /* modal backdrop attachment [default: var(--background-attachment)] */
-    --backdrop-brightness: var(--background-brightness); /* modal backdrop brightness (< 100% for darken, > 100% for lighten) [default: var(--background-brightness)] */
-    --backdrop-contrast: var(--background-contrast); /* modal backdrop contrast [default: var(--background-contrast)] */
-    --backdrop-saturation: var(--background-saturation); /* modal backdrop saturation [default: var(--background-saturation)] */
-    --backdrop-invert: var(--background-invert); /* modal backdrop invert (0 - 100%)  [default: var(--background-invert)] */
-    --backdrop-grayscale: var(--background-grayscale); /* modal backdrop grayscale ( 0 - 100%) [default: var(--background-grayscale)] */
-    --backdrop-sepia: var(--background-sepia); /* modal backdrop sepia (0 - 100%) [default: var(--background-sepia)] */
-    --backdrop-blur: var(--background-blur); /* modal backdrop blur [default: var(--background-blur)] */
-
-    /* USER POPOUT BACKGROUND */
-    --user-popout-image: var(--background-image); /* app background image (link must be HTTPS) [default: var(--background-image)] */
-    --user-popout-position: var(--background-position); /* user popout background position [default: var(--background-position)] */
-    --user-popout-size: var(--background-size); /* user popout background size [default: var(--background-size)] */
-    --user-popout-repeat: var(--background-repeat); /* user popout background repeat [default: var(--background-repeat)] */
-    --user-popout-attachment: var(--background-attachment); /* user popout background attachment [default: var(--background-attachment)] */
-    --user-popout-brightness: var(--background-brightness); /* user popout background brightness (< 100% for darken, > 100% for lighten) [default: var(--background-brightness)] */
-    --user-popout-contrast: var(--background-contrast); /* user popout background contrast [default: var(--background-contrast)] */
-    --user-popout-saturation: var(--background-saturation); /* user popout background saturation [default: var(--background-saturation)] */
-    --user-popout-invert: var(--background-invert); /* user popout background invert (0 - 100%) [default: var(--background-invert)] */
-    --user-popout-grayscale: var(--background-grayscale); /* user popout background grayscale (0 - 100%) [default: var(--background-grayscale)] */
-    --user-popout-sepia: var(--background-sepia); /* user popout background sepia (0 - 100%) [default: var(--background-sepia)] */
-    --user-popout-blur: calc(var(--background-blur) + 3px); /* user popout background blur [default: calc(var(--background-blur) + 3px)] */
-    --user-popout-overlay: rgba(0, 0, 0, 0.5); /* user popout overlay color [default: rgba(0, 0, 0, .6)] */
-
-    /* USER MODAL BACKGROUND */
-    --user-modal-image: var(--background-image); /* app background image (link must be HTTPS) [default: var(--background-image)] */
-    --user-modal-position: var(--background-position); /* user modal background position [default: var(--background-position)] */
-    --user-modal-size: var(--background-size); /* user modal background size [default: var(--background-size)] */
-    --user-modal-repeat: var(--background-repeat); /* user modal background repeat [default: var(--background-repeat)] */
-    --user-modal-attachment: var(--background-attachment); /* user modal background attachment [default: var(--background-attachment)] */
-    --user-modal-brightness: var(--background-brightness); /* user modal background brightness (< 100% for darken, > 100% for lighten) [default: var(--background-brightness)] */
-    --user-modal-contrast: var(--background-contrast); /* user modal background contrast [default: var(--background-contrast)] */
-    --user-modal-saturation: var(--background-saturation); /* user modal background saturation [default: var(--background-saturation)] */
-    --user-modal-invert: var(--background-invert); /* user modal background invert (0 - 100%) [default: var(--background-invert)] */
-    --user-modal-grayscale: var(--background-grayscale); /* user modal background grayscale (0 - 100%) [default: var(--background-grayscale)] */
-    --user-modal-sepia: var(--background-sepia); /* user modal background sepia (0 - 100%) [default: var(--background-sepia)] */
-    --user-modal-blur: calc(var(--background-blur) + 3px); /* user modal background blur [default: calc(var(--background-blur) + 3px)] */
-
-    /* THEME BD COLORS */
-    --bd-blue: var(--main-color); /* betterdiscord main color [default: var(--main-color)] */
-    --bd-blue-hover: var(--hover-color); /* betterdiscord hover color [default: var(--hover-color)] */
-    --bd-blue-active: var(--hover-color); /* betterdiscord active color [default: var(--hover-color)] */
-
-    --popout-color: rgba(0, 0, 0, 0.8);
-    --modal-color: rgba(0, 0, 0, 0.5);
-    --font-primary: var(--main-font);
+  --main-color: #2780e6;
+  --hover-color: #1e63b3;
+  --success-color: #43b581;
+  --danger-color: #982929;
+  --channel-unread: var(--main-color);
+  --channel-color: rgba(255, 255, 255, 0.3);
+  --muted-color: rgba(255, 255, 255, 0.1);
+  --channel-text-selected: #fff;
+  --url-color: var(--main-color);
+  --online-color: #43b581;
+  --idle-color: #faa61a;
+  --dnd-color: #982929;
+  --offline-color: #808080;
+  --streaming-color: #593695;
+  --main-font: gg sans, Helvetica Neue, Helvetica, Arial, sans-serif;
+  --code-font: Consolas, Liberation Mono, Menlo, Courier, monospace;
+  --font-display: var(--main-font);
+  --text-normal: rgb(220, 221, 222);
+  --text-muted: rgb(114, 118, 125);
+  --channels-width: 220px;
+  --members-width: 240px;
+  --background-shading: 100%;
+  --background-overlay: rgba(0, 0, 0, 0.6);
+  --background-image: url(https://clearvision.github.io/images/sapphire.jpg);
+  --background-position: center;
+  --background-size: cover;
+  --background-repeat: no-repeat;
+  --background-attachment: fixed;
+  --background-brightness: 100%;
+  --background-contrast: 100%;
+  --background-saturation: 100%;
+  --background-invert: 0%;
+  --background-grayscale: 0%;
+  --background-sepia: 0%;
+  --background-blur: 0px;
+  --backdrop-overlay: rgba(0, 0, 0, 0.8);
+  --backdrop-image: var(--background-image);
+  --backdrop-position: var(--background-position);
+  --backdrop-size: var(--background-size);
+  --backdrop-repeat: var(--background-repeat);
+  --backdrop-attachment: var(--background-attachment);
+  --backdrop-brightness: var(--background-brightness);
+  --backdrop-contrast: var(--background-contrast);
+  --backdrop-saturation: var(--background-saturation);
+  --backdrop-invert: var(--background-invert);
+  --backdrop-grayscale: var(--background-grayscale);
+  --backdrop-sepia: var(--background-sepia);
+  --backdrop-blur: var(--background-blur);
+  --user-popout-image: var(--background-image);
+  --user-popout-position: var(--background-position);
+  --user-popout-size: var(--background-size);
+  --user-popout-repeat: var(--background-repeat);
+  --user-popout-attachment: var(--background-attachment);
+  --user-popout-brightness: var(--background-brightness);
+  --user-popout-contrast: var(--background-contrast);
+  --user-popout-saturation: var(--background-saturation);
+  --user-popout-invert: var(--background-invert);
+  --user-popout-grayscale: var(--background-grayscale);
+  --user-popout-sepia: var(--background-sepia);
+  --user-popout-blur: calc(var(--background-blur) + 3px);
+  --user-popout-overlay: rgba(0, 0, 0, 0.65);
+  --user-modal-image: var(--background-image);
+  --user-modal-position: var(--background-position);
+  --user-modal-size: var(--background-size);
+  --user-modal-repeat: var(--background-repeat);
+  --user-modal-attachment: var(--background-attachment);
+  --user-modal-brightness: var(--background-brightness);
+  --user-modal-contrast: var(--background-contrast);
+  --user-modal-saturation: var(--background-saturation);
+  --user-modal-invert: var(--background-invert);
+  --user-modal-grayscale: var(--background-grayscale);
+  --user-modal-sepia: var(--background-sepia);
+  --user-modal-blur: calc(var(--background-blur) + 3px);
+  --home-icon: url(https://clearvision.github.io/icons/discord.svg);
+  --home-position: center;
+  --home-size: 40px;
+  --popout-color: rgba(0, 0, 0, 0.8);
+  --modal-color: rgba(0, 0, 0, 0.5);
+  --bd-blue: var(--main-color);
+  --bd-blue-hover: var(--hover-color);
+  --bd-blue-active: var(--hover-color);
+  --font-primary: var(--main-font);
+  --font-code: var(--code-font);
 }
 @keyframes cv-fade-in {
   from {
@@ -461,6 +443,51 @@ textarea,
   background: rgba(0, 0, 0, calc(var(--background-shading) * 0.6));
   box-shadow: 0 0 20px rgba(0, 0, 0, calc(var(--background-shading) * 0.6));
 }
+.typeWindows_e41dab > .wordmark__5b8c9 {
+  position: static;
+  margin-right: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 1;
+  pointer-events: none;
+  user-select: none;
+  order: 1;
+}
+.typeWindows_e41dab > .wordmark__5b8c9:before,
+.typeWindows_e41dab > .wordmark__5b8c9:after {
+  margin-left: 3px;
+  font-weight: 600;
+  white-space: nowrap;
+  order: 1;
+}
+.typeWindows_e41dab > .wordmark__5b8c9:before {
+  content: "ClearVision";
+  color: rgba(255, 255, 255, 0.7);
+  font-size: 14px;
+  text-shadow: 0 0 3px #000;
+}
+.typeWindows_e41dab > .wordmark__5b8c9:after {
+  content: "v6.9.0";
+  color: rgba(255, 255, 255, 0.3);
+  font-family: var(--code-font);
+  font-size: 10px;
+}
+.typeWindows_e41dab > .wordmark__5b8c9 > svg {
+  filter: drop-shadow(0 0 5px var(--main-color));
+  margin-top: 6px;
+}
+.typeWindows_e41dab > .wordmark__5b8c9 > svg > g > path {
+  fill: var(--main-color);
+}
+.typeWindows_e41dab > .wordmark__5b8c9 > svg > g > path:first-child {
+  d: path(
+    "M3.57642276,0.141304348 L0,0.141304348 L0,4.22826087 L2.38069106,6.40217391 L2.38069106,2.43478261 L3.66260163,2.43478261 C4.47052846,2.43478261 4.86910569,2.83695652 4.86910569,3.4673913 L4.86910569,6.5 C4.86910569,7.13043478 4.49207317,7.55434783 3.66260163,7.55434783 L0,7.55434783 L0,9.85869565 L3.57642276,9.85869565 C5.49390244,9.86956522 7.29288618,8.90217391 7.29288618,6.66304348 L7.29288618,3.39130435 C7.29288618,1.13043478 5.49390244,0.141304348 3.57642276,0.141304348 Z M22.3310976,6.67391304 L22.3310976,3.32608696 C22.3310976,2.11956522 24.4640244,1.83695652 25.1103659,3.05434783 L27.0817073,2.23913043 C26.3168699,0.510869565 24.8949187,0 23.7207317,0 C21.803252,0 19.9073171,1.13043478 19.9073171,3.32608696 L19.9073171,6.67391304 C19.9073171,8.88043478 21.803252,10 23.6776423,10 C24.8841463,10 26.3276423,9.39130435 27.1247967,7.81521739 L25.0134146,6.82608696 C24.4963415,8.17391304 22.3310976,7.84782609 22.3310976,6.67391304 Z M15.8030488,3.7826087 C15.0597561,3.61956522 14.5642276,3.34782609 14.5319106,2.88043478 C14.575,1.75 16.2878049,1.7173913 17.2896341,2.79347826 L18.8731707,1.55434783 C17.8821138,0.326086957 16.7617886,0 15.598374,0 C13.8424797,0 12.1404472,1 12.1404472,2.91304348 C12.1404472,4.77173913 13.5408537,5.76086957 15.0813008,6 C15.8676829,6.10869565 16.7402439,6.42391304 16.7186992,6.97826087 C16.654065,8.02173913 14.5426829,7.9673913 13.5839431,6.7826087 L12.0650407,8.23913043 C12.9591463,9.40217391 14.1764228,10 15.3182927,10 C17.074187,10 19.0239837,8.9673913 19.0993902,7.08695652 C19.2071138,4.69565217 17.5050813,4.09782609 15.8030488,3.7826087 Z M8.59634146,9.85869565 L11.0093496,9.85869565 L11.0093496,0.141304348 L8.59634146,0.141304348 L8.59634146,9.85869565 Z M49.2835366,0.141304348 L45.7071138,0.141304348 L45.7071138,4.22826087 L48.0878049,6.40217391 L48.0878049,2.43478261 L49.3589431,2.43478261 C50.1668699,2.43478261 50.5654472,2.83695652 50.5654472,3.4673913 L50.5654472,6.5 C50.5654472,7.13043478 50.1884146,7.55434783 49.3589431,7.55434783 L45.6963415,7.55434783 L45.6963415,9.85869565 L49.2727642,9.85869565 C51.1902439,9.86956522 52.9892276,8.90217391 52.9892276,6.66304348 L52.9892276,3.39130435 C53,1.13043478 51.2010163,0.141304348 49.2835366,0.141304348 Z M31.7353659,0 C29.753252,0 27.7819106,1.09782609 27.7819106,3.33695652 L27.7819106,6.66304348 C27.7819106,8.89130435 29.7640244,10 31.7569106,10 C33.7390244,10 35.7103659,8.89130435 35.7103659,6.66304348 L35.7103659,3.33695652 C35.7103659,1.10869565 33.7174797,0 31.7353659,0 Z M33.2865854,6.66304348 C33.2865854,7.35869565 32.5109756,7.7173913 31.7461382,7.7173913 C30.9705285,7.7173913 30.1949187,7.36956522 30.1949187,6.66304348 L30.1949187,3.33695652 C30.1949187,2.61956522 30.9489837,2.23913043 31.7030488,2.23913043 C32.4894309,2.23913043 33.2865854,2.58695652 33.2865854,3.33695652 L33.2865854,6.66304348 Z M44.3605691,3.33695652 C44.3067073,1.05434783 42.7770325,0.141304348 40.8056911,0.141304348 L36.9815041,0.141304348 L36.9815041,9.86956522 L39.4268293,9.86956522 L39.4268293,6.77173913 L39.8577236,6.77173913 L42.0768293,9.85869565 L45.0930894,9.85869565 L42.4861789,6.52173913 C43.6495935,6.15217391 44.3605691,5.14130435 44.3605691,3.33695652 Z M40.8487805,4.65217391 L39.4268293,4.65217391 L39.4268293,2.43478261 L40.8487805,2.43478261 C42.3784553,2.43478261 42.3784553,4.65217391 40.8487805,4.65217391 Z"
+  );
+}
+.typeWindows_e41dab > .wordmark__5b8c9 > svg > g > path:not(:first-child) {
+  display: none;
+}
 .typeWindows_e41dab > .winButton_f17fb6 {
   top: -2px;
   opacity: 0.7;
@@ -472,6 +499,36 @@ textarea,
 }
 .typeWindows_e41dab > .winButtonClose__6396d:hover {
   background: var(--danger-color);
+}
+.typeMacOS_cacc59 {
+  width: 70px;
+  height: 48px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.typeMacOS_cacc59.unfocused__66649 .macButton__0de05 {
+  background: rgba(255, 255, 255, 0.7);
+}
+.typeMacOS_cacc59 > .macButtons__40068 {
+  padding: 0 10px;
+}
+.typeMacOS_cacc59:before,
+.typeMacOS_cacc59:after {
+  margin: 0 2px;
+  font-size: 10px;
+  order: 1;
+}
+.typeMacOS_cacc59:before {
+  content: "CV";
+  color: var(--main-color);
+  font-weight: 700;
+  text-shadow: 0 0 3px;
+}
+.typeMacOS_cacc59:after {
+  content: "6.9.0";
+  color: rgba(255, 255, 255, 0.3);
 }
 .tabBar_d4764b {
   border-bottom: none;
